5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3998/executions/1708_3034.log
== TEST (2019-04-29 14:20:48) 
-- CODE:
f = float(input("valor de x: "))

from math import*
if(x < 0)and(x >= -4):
	print(sqrt*x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(x < 0)and(x >= -4):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:21:40) 
-- CODE:
f = float(input("valor de x: "))

from math import*
if(x > 0)and(x <= 4):
	print(sqrt*x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(x > 0)and(x <= 4):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:23:18) 
-- CODE:
f = float(input("valor de x: "))

from math import*
if(x > 0)and(x <= 4):
	print(x**(1/f))
elif()
-- ERROR:
File "XXXX", line 6
    elif()
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:23:22) 
-- CODE:
f = float(input("valor de x: "))

from math import*
if(x > 0)and(x <= 4):
	print(x**(1/f))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(x > 0)and(x <= 4):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
